--- a/index.html
+++ b/index.html
@@ -29,5 +29,43 @@
       </div>
     </header>
     <!-- Header section End -->
+
+    <main>
+      <!-- My Skils section Start -->
+      <section class="container">
+        <h1 class="skil-title">My Skis</h1>
+        <div class="my-skils">
+          <div class="skil">
+            <img src="./images/icons/js.png" alt="Javascript" />
+            <h3>Javascript</h3>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skil">
+            <img src="./images/icons/react.png" alt="React-JS" />
+            <h3>React JS</h3>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skil">
+            <img src="./images/icons/nodejs.png" alt="nodejs" />
+            <h3>Node JS</h3>
+            <p>
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolors.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- My Skils section End -->
+    </main>
   </body>
 </html>
