compleate Failures section with fontawsome icone uses

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,500;1,400&family=Varela&family=Work+Sans:ital,wght@0,400;0,700;1,500&display=swap"
       rel="stylesheet"
     />
+    <!-- Font awsome link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- custom css link -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
@@ -32,40 +40,80 @@
 
     <main>
       <!-- My Skils section Start -->
-      <section class="container">
-        <h1 class="skil-title">My Skis</h1>
-        <div class="my-skils">
-          <div class="skil">
-            <img src="./images/icons/js.png" alt="Javascript" />
-            <h3>Javascript</h3>
-            <p>
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
-            </p>
-          </div>
-          <div class="skil">
-            <img src="./images/icons/react.png" alt="React-JS" />
-            <h3>React JS</h3>
-            <p>
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolor.
-            </p>
-          </div>
-          <div class="skil">
-            <img src="./images/icons/nodejs.png" alt="nodejs" />
-            <h3>Node JS</h3>
-            <p>
-              List skill/technologies here. You can change the icon above to any
-              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
-              ligula eget dolors.
-            </p>
+      <section id="my-skil-section">
+        <div class="container">
+          <h1 class="skil-title">My Skis</h1>
+          <div class="my-skils">
+            <div class="skil">
+              <img src="./images/icons/js.png" alt="Javascript" />
+              <h3>Javascript</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="skil">
+              <img src="./images/icons/react.png" alt="React-JS" />
+              <h3>React JS</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+            <div class="skil">
+              <img src="./images/icons/nodejs.png" alt="nodejs" />
+              <h3>Node JS</h3>
+              <p>
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolors.
+              </p>
+            </div>
           </div>
         </div>
       </section>
 
       <!-- My Skils section End -->
+
+      <!-- Failures section start -->
+      <section class="container">
+        <div class="failures">
+          <div class="failures-img">
+            <img src="./images/person.png" alt="failures-person" />
+          </div>
+          <div class="failures-content">
+            <h2>My failures of previous year</h2>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock.
+            </p>
+            <ul>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+                not simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular , is not
+                simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+                not simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular simply.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!-- Failures section end -->
     </main>
   </body>
 </html>
