compleate my next plans section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Lora:ital,wght@1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,500;1,400&family=Varela&family=Work+Sans:ital,wght@0,400;0,700;1,500&display=swap"
       rel="stylesheet"
     />
-    <!-- Font awsome link -->
+    <!-- Font awesome link -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -114,6 +114,36 @@
         </div>
       </section>
       <!-- Failures section end -->
+
+      <!-- My Plans sections start -->
+      <section id="my-plan">
+        <div class="container">
+          <h1>My Plan</h1>
+          <div class="totalPlaning">
+            <div>
+              <img src="./images/icons/web.png" alt="" />
+              <h3>Web Development</h3>
+              <p>I want to start larn Web devolopment.</p>
+            </div>
+            <div>
+              <img src="./images/icons/javascript .png" alt="" width="90px" />
+              <h3>Javascript</h3>
+              <p>I want to start Javascript deep drive .</p>
+            </div>
+            <div>
+              <img src="./images/icons/smoke.png" alt="" />
+              <h3>Smoking Habit</h3>
+              <p>I want to end this bad habit.</p>
+            </div>
+            <div>
+              <img src="./images/icons/ecom.png" alt="" />
+              <h3>ecommerce</h3>
+              <p>I want to create a ecommerce website</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- My Plans sections start -->
     </main>
   </body>
 </html>
