compleating 90% work on this webite

--- a/index.html
+++ b/index.html
@@ -144,6 +144,19 @@
         </div>
       </section>
       <!-- My Plans sections start -->
+
+      <section id="positiveMind">
+        <div class="container">
+          <div class="positive-content">
+            <h1>Awlays keep a positive mindset</h1>
+            <button class="btn btn-header">Call Now</button>
+          </div>
+        </div>
+      </section>
     </main>
+    <!-- Footer -->
+    <footer id="footer">
+      <div class="container"></div>
+    </footer>
   </body>
 </html>
