project fullay compleated with html5 ,css3 and fontawsome icon

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="./images/icons/html.png"
+      type="image/x-icon"
+    />
     <!-- custom css link -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
@@ -32,7 +38,7 @@
             the majority have suffered alteration in some form, by injected
             humour, or randomised words
           </p>
-          <button class="btn btn-header">Contact Us</button>
+          <button class="btn btn-primary">Contact Us</button>
         </div>
       </div>
     </header>
@@ -149,14 +155,37 @@
         <div class="container">
           <div class="positive-content">
             <h1>Awlays keep a positive mindset</h1>
-            <button class="btn btn-header">Call Now</button>
+            <button class="btn btn-primary">Call Now</button>
           </div>
         </div>
       </section>
     </main>
     <!-- Footer -->
     <footer id="footer">
-      <div class="container"></div>
+      <div class="container">
+        <div class="footer-content">
+          <div class="left-part">
+            <h1>Future</h1>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words
+            </p>
+            <p>Email : info@gmail.com</p>
+            <p>Phone : 01500 00 00 00</p>
+            <div class="social-icon">
+              <img src="./images/icons/fb.png" alt="" />
+              <img src="./images/icons/twitter.png" alt="" />
+              <img src="./images/icons/youtube.png" alt="" />
+            </div>
+          </div>
+          <div class="right-part">
+            <h2>Subscribe</h2>
+            <input type="email" placeholder="Enter Your Email" />
+            <button class="btn btn-sub">Subscribe</button>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
