--- a/index.html
+++ b/index.html
@@ -53,29 +53,44 @@
             <div class="skil">
               <img src="./images/icons/js.png" alt="Javascript" />
               <h3>Javascript</h3>
+              <hr />
               <p>
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
                 commodo ligula eget dolor.
               </p>
+              <hr />
+              <a href="#"
+                >learn More <i class="fa-solid fa-arrow-right"></i>
+              </a>
             </div>
             <div class="skil">
               <img src="./images/icons/react.png" alt="React-JS" />
               <h3>React JS</h3>
+              <hr />
               <p>
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
                 commodo ligula eget dolor.
               </p>
+              <hr />
+              <a href="#"
+                >learn More <i class="fa-solid fa-arrow-right"></i>
+              </a>
             </div>
             <div class="skil">
               <img src="./images/icons/nodejs.png" alt="nodejs" />
               <h3>Node JS</h3>
+              <hr />
               <p>
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
                 commodo ligula eget dolors.
               </p>
+              <hr />
+              <a href="#"
+                >learn More <i class="fa-solid fa-arrow-right"></i>
+              </a>
             </div>
           </div>
         </div>
