--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!-- My Skils section Start -->
       <section id="my-skil-section">
         <div class="container">
-          <h1 class="skil-title">My Skis</h1>
+          <h1 class="skil-title">My Skils</h1>
           <div class="my-skils">
             <div class="skil">
               <img src="./images/icons/js.png" alt="Javascript" />
