--- a/index.html
+++ b/index.html
@@ -164,8 +164,9 @@
           </div>
         </div>
       </section>
-      <!-- My Plans sections start -->
-
+      <!-- My Plans sections End -->
+      
+      <!-- My Positive Mind sections start -->
       <section id="positiveMind">
         <div class="container">
           <div class="positive-content">
